[release] Jawgstrap 1.5.7 : fix nowrap

--- a/jawgstrap.scss
+++ b/jawgstrap.scss
@@ -260,6 +260,7 @@ html, body {
     >.btn:last-child {
       border-radius: 0 6px 6px 0;
     }
+    white-space: nowrap;
   }
 
   /********** ALERTS ***********/
